--- a/src/assets/styles/player.css
+++ b/src/assets/styles/player.css
@@ -37,9 +37,10 @@ h1{
     margin: 0 0.25rem;
     color: rgba(54, 54, 54, 0.4);
     vertical-align: middle;
-	cursor: pointer;
+    cursor: pointer;
+    transition: background-color .2s;
 }
-.buttonPlay{
+.buttonPlayPause{
     font-size: 4rem;
     margin: 0 1.5rem;
     color: rgb(54, 54, 54);
@@ -70,7 +71,29 @@ img{
 .title{
     text-align: center;
 }
-
+.timer {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.k-progress-outer {
+    padding: 0 10px !important;
+}
+.k-progress-outer-line{
+    background: #f9803a8a;
+    height: 10px !important;
+}
+a.button, a.buttonPlayPause{
+    transition: 200ms ;
+    transition-timing-function: linear;
+}
+a.button:hover{
+    color: rgb(54, 54, 54);
+}
+a.buttonPlayPause:hover{
+    color: rgba(54, 54, 54, 0.4);
+}
 @media screen and (max-width: 1000px) {
     .Player{
         width: 60%
@@ -93,7 +116,7 @@ img{
     .Player{
         width: 100%;
     }
-    .buttonPlay{
+    .buttonPlayPause{
         font-size: 3.5rem;
     }
     .AlbumCover{
@@ -103,10 +126,7 @@ img{
     }
 }
 @media screen and (max-width: 430px) {
-    .Player{
-        width: 100%;
-    }
-    .buttonPlay{
+    .buttonPlayPause{
         font-size: 3.5rem;
         margin: 0 1rem;
     }
@@ -114,21 +134,18 @@ img{
         font-size: 35px;
     }
     .PlayerButtons{
-        padding: 0px;
+        padding-bottom: 10px;
     }
     .AlbumCover{
         width: 70%;
     }
 }
 @media screen and (max-width: 340px) {
-    .Player{
-        width: 100%;
-    }
-    .buttonPlay{
-        font-size: 30px;
+    .buttonPlayPause{
+        font-size: 50px;
         margin: 0 7px;
     }
     .button{
-        font-size: 25px;
+        font-size: 35px;
     }
 }
